<resources>
    <string name="app_name">DistributerAPP</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="dont_have_an_account">Dont\' have an account ?</string>
    <string name="login_account">Login Account</string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="forgot_password">Forgot Password ?</string>
    <string name="log_in">LOG IN</string>
    <string name="or">OR</string>
    <string name="sign_up">Sign up</string>
    <string name="google_images">google images</string>
    <string name="facebooklogo">facebooklogo</string>
    <string name="omot">OMOT</string>
    <string name="andr">ANDR</string>
</resources>